Rewrite ImageRegionStores for better caching